--- a/style.css
+++ b/style.css
@@ -1,1 +1,93 @@
+body{
+    font-family: 'Poppins', sans-serif;
+}
+.header-display{
+    display: flex;
+    width: 100%;
+    background-color: #1B98F5;
+    width: 1147px;
+    height: 612px;
+    border-radius: 30px;
+    padding-top: 33px;
+    padding-left: 106px;
+}
+.header-title{
+    font-weight: 700;
+    font-size: 70px;
+    color: white;
+}
+.header-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: white;
+}
+.live-button{
+    padding: 16px 25px;
+    background-color:#E03B8B;
+    color: white;
+    font-weight: 400;
+    font-size: 20px;
+    border-radius: 10px;
+    border: none;
+    margin-top: 36px;
+}
+.header-thumbnail img{
+    width: 581px;
+    height: 613px;
+    padding-left: 30px;
+}
+.players{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin-top: 3em;
+    row-gap: 30px;
+}
 
+.player-button{
+    padding: 4px 16px;
+    font-weight: 500;
+    font-size: 16px;
+    margin-top: 20px;
+   
+}
+.player-heading{
+    font-weight: 600;
+ font-size: 18px;
+}
+.aside-section{
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    width: 25%;
+    height: 170px;
+    align-items: center;
+    justify-content: center;
+}
+.aside-section button a{
+    text-decoration:none;
+    color: red;
+    border-radius: 5px;
+    /* background-color: white;   */
+    font-weight: 500;
+    font-size: 20px;
+    text-align: center;
+  
+
+}
+
+.aside-elements{
+    padding: 5px 20px;
+}
+.aside-button{
+    padding-left: 53px;
+    padding-top: 20px; 
+     /* text-align: center; */
+}
+.unique-button{
+    padding-left: 120px;
+    padding-top: 20px;
+}
+.unique-button2{
+    padding-left: 163px;
+    padding-top: 20px;
+}
